--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -9,7 +9,7 @@
 
 <form action="/login" method="POST">
     <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
-    id : <input type="text" name="username"> <br> <!-- username, user_name, id ?? -->
+    id : <input type="text" name="username"> <br> <!-- 여기서 정해둔대로 username 그대로 써야함 -->
     password : <input type="password" name="password"> <br>
     <button type="submit">Login</button>
 </form> <br>
